<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDarkColor"
    tools:context="xyz.shmeleva.eight.activities.RegistrationActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="@dimen/spacing_normal"
        android:src="@drawable/ic_baseline_arrow_back_24px"
        android:tint="#FFFFFF"
        android:hapticFeedbackEnabled="true"
        android:onClick="navigateBack"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/registration_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/backgroundColor"
        style="@style/AppTheme.CardView.Floating"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registration_username_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registration_email_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registration_password_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/registration_image_card_view"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:elevation="8dp"
        app:cardCornerRadius="48dp"
        app:layout_anchor="@id/registration_card_view"
        app:layout_anchorGravity="top|center">

        <ImageView
            android:id="@+id/registration_image_view"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            />

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/registration_image_card_view"
        app:layout_anchorGravity="center|end"
        android:src="@drawable/ic_baseline_photo_camera_24px"
        android:tint="@color/secondaryTextColor"
        />

    <Button
        android:id="@+id/registration_sign_in_button"
        style="@style/AppTheme.Button.Rounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:onClick="signUp"
        android:paddingEnd="@dimen/spacing_normal"
        android:paddingStart="@dimen/spacing_normal"
        android:text="@string/action_sign_up"
        android:textStyle="bold"
        app:layout_anchor="@id/registration_card_view"
        app:layout_anchorGravity="bottom|center" />

</android.support.design.widget.CoordinatorLayout>
